# yin-yang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/yang/: project.yml
apps/yang/Yang/: ContentView.swift  YangApp.swift  yang-Bridging-Header.h
apps/yang/Yang/FFI/: YangBridge.swift
apps/yang/Yang/Models/: ConnectionModel.swift
apps/yang/Yang/Views/: ConnectionView.swift  HUDView.swift  StreamView.swift
crates/streamd-client/: Cargo.toml
crates/streamd-client/src/: cursor.rs  main.rs
crates/streamd-client/src/decode/: videotoolbox.rs
crates/streamd-client/src/input/: capture.rs  mod.rs
crates/streamd-client/src/render/: metal.rs
crates/streamd-client/src/transport/: control.rs  video_rx.rs
crates/streamd-proto/: Cargo.toml
crates/streamd-proto/src/: control.rs  packets.rs
crates/streamd-server/: Cargo.toml  build.rs
crates/streamd-server/src/: cli.rs  main.rs  pipeline.rs
crates/streamd-server/src/capture/: hdr_fp16_to_bgra.hlsl  mod.rs  wayland.rs  windows.rs
crates/streamd-server/src/encode/: nvenc.rs
crates/streamd-server/src/transport/: control.rs  video_tx.rs
crates/yang/: Cargo.toml
crates/yang/include/: yang.h
crates/yang/src/: cursor.rs  ffi.rs  lib.rs  main.rs  telemetry.rs
crates/yang/src/decode/: mod.rs  videotoolbox.rs
crates/yang/src/input/: capture.rs  mod.rs
crates/yang/src/render/: interpolator.rs  metal.rs  mod.rs
crates/yang/src/transport/: control.rs  mod.rs  video_rx.rs
crates/yin/: Cargo.toml  build.rs
crates/yin-yang-proto/: Cargo.toml
crates/yin-yang-proto/src/: control.rs  input.rs  keymap.rs  lib.rs  packets.rs
crates/yin/src/: cli.rs  main.rs  pipeline.rs
crates/yin/src/capture/: mod.rs  wayland.rs  windows.rs
crates/yin/src/encode/: mod.rs  nvenc.rs
crates/yin/src/input/: linux.rs  windows.rs
crates/yin/src/transport/: control.rs  mod.rs  video_tx.rs
docs/releases/: README.md  v0.1.0-alpha.1.md  v0.2.0-alpha.1.md
scripts/: generate_release_notes.py
scripts/tests/: test_generate_release_notes.py
