[package]
name = "streamd-client"
version = "0.1.0-alpha.1"
edition = "2021"
description = "macOS QUIC remote desktop client for streamd with VideoToolbox decode and Metal presentation."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["quic", "remote-desktop", "macos", "videotoolbox", "metal"]

[package.metadata.dist]
display-name = "streamd Client"
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]

[features]
# The objc `msg_send!` macro still references `feature = "cargo-clippy"`.
# Declaring it here keeps modern check-cfg + clippy runs from failing on macOS.
cargo-clippy = []

[dependencies]
streamd-proto = { workspace = true }
tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
bytes = { workspace = true }
socket2 = { workspace = true }
crossbeam-channel = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.22"
core-foundation = "0.10"
core-video = { version = "0.5.2", features = ["metal"] }
core-graphics = "0.24"
foreign-types = "0.5"
libc = "0.2"
metal = "0.33.0"
objc = "0.2"
rdev = "0.5.3"

[build-dependencies]
