[package]
name = "yin-yang-proto"
version = "0.2.0-alpha.1"
edition = "2021"
description = "Shared transport packets, control messages, and input mappings for Yin-Yang."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["quic", "remote-desktop", "protocol", "input", "streaming"]

[dependencies]
bincode = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bitflags = { version = "2.11", features = ["serde"] }
